syntax = "proto3";

option go_package = "gitlab.com/ConsenSys/client/fr/core-stack/orchestrate.git/types/args";

package args;

// Private arguments
message Private {
    // When sending a private transaction, the sending party's base64-encoded public key to use.
    // If not present and passing private_for
    string private_from = 1;

    // When sending a private transaction, an array of the recipients' base64-encoded public keys.
    repeated string private_for = 2;

    // For Quorum >=2.2.1 support
    string private_tx_type = 3;
}
